<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/add_new_item"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/imgShowProductPhoto"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_80sdp"/>
    <LinearLayout
        android:id="@+id/viewChooseProductPhoto"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/edit_text_shape"
        android:layout_width="@dimen/_150sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:src="@android:drawable/ic_menu_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorPrimaryDark" />
        <TextView
            android:padding="@dimen/_1sdp"
            android:text="@string/upload_photo"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:padding="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etProductName"
            android:layout_gravity="center"
            android:elevation="@dimen/_5sdp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_margin="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:background="@drawable/edit_text_shape"
            android:layout_weight="1"
            android:hint="@string/product_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"/>
    </LinearLayout>
    <LinearLayout
        android:padding="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etProductDescription"
            android:layout_gravity="center"
            android:elevation="@dimen/_5sdp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_margin="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:background="@drawable/edit_text_shape"
            android:layout_weight="1"
            android:hint="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"/>
    </LinearLayout>
    <LinearLayout
        android:padding="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etProductPrice"
            android:layout_gravity="center"
            android:elevation="@dimen/_5sdp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_margin="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:background="@drawable/edit_text_shape"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"/>
    </LinearLayout>

    <LinearLayout
        android:padding="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<!--    <LinearLayout
        android:background="@drawable/login_button_selector"
        android:padding="1dp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->
<!--        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spCategory"
            android:background="@null"
            android:layout_gravity="center"
            android:elevation="@dimen/_5sdp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"/>-->
        <EditText
            android:id="@+id/etCategory"
            android:layout_gravity="center"
            android:elevation="@dimen/_5sdp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/edit_text_shape"
            android:layout_margin="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_weight="1"
            android:hint="Category"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"/>
    </LinearLayout>
    <TextView
        android:layout_marginLeft="@dimen/_5sdp"
        android:padding="@dimen/_3sdp"
        android:text="@string/select_option"
        android:layout_gravity="left"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:buttonTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:gravity="center"
            android:buttonTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/out_of_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <LinearLayout
        android:padding="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btnAddProduct"
            android:gravity="center"
            android:elevation="@dimen/_5sdp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_margin="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:background="@drawable/login_button_selector"
            android:hint="@string/add_item"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"/>
    </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>