<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".otp.OTPActivity">
    <TextView
        android:id="@+id/txtSignIn"
        android:paddingRight="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:text="@string/verif_email_address"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtEmail"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"/>
    <LinearLayout
        android:padding="@dimen/_8sdp"
        android:layout_margin="@dimen/_2sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="@dimen/_30sdp"
            app:pinHeight="@dimen/_30sdp"
            app:pinLength="6"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:hint="0"
            app:inputType="text"
            app:password="false"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="@dimen/_5sdp"
            android:text="@string/did_not_receive_otp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:onClick="resendOTP"
            android:padding="@dimen/_5sdp"
            android:text="@string/resend_otp"
            android:layout_marginTop="@dimen/_2sdp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnVerifyotp"
        android:onClick="verifyOTP"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_margin="@dimen/_5sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/login_button_selector"
        android:text="@string/verify"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"/>
</LinearLayout>