<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="@dimen/_5sdp"
        android:layout_below="@id/txtSignIn"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linearFirst"
            android:padding="@dimen/_1sdp"
            android:layout_margin="@dimen/_1sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etFirstName"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:layout_weight="1"
                android:hint="@string/enter_first_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>
        <LinearLayout
            android:padding="1dp"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etLastName"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/edit_text_shape"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>
        <LinearLayout
            android:padding="1dp"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:layout_weight="1"
                android:hint="@string/email_address"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>
        <LinearLayout
            android:padding="1dp"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etPassword"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:layout_weight="1"
                android:hint="@string/enter_password"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>

        <LinearLayout
            android:padding="1dp"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:layout_weight="1"
                android:hint="@string/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSecond"
            android:padding="1dp"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etCellNo"
                android:inputType="number"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:layout_weight="1"
                android:hint="@string/enter_cell_no"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>
        <LinearLayout
            android:padding="1dp"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/sp_languages"
                android:layout_gravity="center"
                android:entries="@array/languages_array"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:layout_weight="1"
                android:hint="@string/enter_cell_no"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="login"
            android:padding="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:elevation="@dimen/_5sdp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/alread_have_account"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
            <TextView
                android:elevation="@dimen/_5sdp"
                android:textStyle="bold|italic|normal"
                android:textColor="@color/red"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>

        <LinearLayout
            android:padding="1dp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnRegister"
                android:gravity="center"
                android:layout_gravity="center"
                android:elevation="@dimen/_5sdp"
                android:textColor="@color/white"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/button_blue"
                android:text="@string/next"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>