<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.Select_Language_Activity">
    <RelativeLayout
        android:background="@drawable/bg_upper_"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp">
        <TextView
            android:id="@+id/txtLang"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/white"
            android:text="@string/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:visibility="gone"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/selectLng"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="left"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/black"
            android:text="@string/select_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/selectLng"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:textSize="@dimen/_18sdp"
                android:text="@string/english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <RadioButton
                android:textSize="@dimen/_18sdp"
                android:text="@string/english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <RadioButton
                android:textSize="@dimen/_18sdp"
                android:text="@string/english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>